Kubernetes Ingress and Config Advanced/troubleshooting/04-wrong-ingress-class/ingress-fixed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canteen-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: canteen.hostel.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hostel-frontend
                port: { number: 80 }
